force-app/main/default/objects/ARTL_DataMigrationStaging__c/ARTL_DataMigrationStaging__c.object-meta.xml
<CustomObject>
    <label>ARTL_DataMigrationStaging</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ARTL_DataMigrationStaging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ARTL_DataMigrationStagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>