force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>