force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/AccountContactRel_Lookup__c.field-meta.xml
<CustomField>
    <fullName>AccountContactRel_Lookup__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AccountContactRel Lookup</label>
    <length>25</length>
    <type>Text</type>
</CustomField>