force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Active</label>
    <length>5</length>
    <type>Text</type>
</CustomField>