force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alias</label>
    <length>15</length>
    <type>Text</type>
</CustomField>