force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Alternate_Email_Addr__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email_Addr__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alternate Email Addr</label>
    <length>90</length>
    <type>Text</type>
</CustomField>