force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/AM_Id__c.field-meta.xml
<CustomField>
    <fullName>AM_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AM Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>