force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Approval_Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_Rejection_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval/Rejection Comments</label>
    <length>15</length>
    <type>Text</type>
</CustomField>