force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Approved_Rejected_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rejected_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approved/Rejected By</label>
    <length>15</length>
    <type>Text</type>
</CustomField>