force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/BA_FX_1_2_Account__c.field-meta.xml
<CustomField>
    <fullName>BA_FX_1_2_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BA FX 1.2 Account #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>