force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/BA_Id__c.field-meta.xml
<CustomField>
    <fullName>BA_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BA Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>