force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/BA_Implementation_Circle__c.field-meta.xml
<CustomField>
    <fullName>BA_Implementation_Circle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BA Implementation Circle</label>
    <length>20</length>
    <type>Text</type>
</CustomField>