force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/BA_Migration_Flag__c.field-meta.xml
<CustomField>
    <fullName>BA_Migration_Flag__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BA Migration Flag</label>
    <length>5</length>
    <type>Text</type>
</CustomField>