force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/BA_Party_Account__c.field-meta.xml
<CustomField>
    <fullName>BA_Party_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BA Party Account #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>