force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/BA_TSM_OLM__c.field-meta.xml
<CustomField>
    <fullName>BA_TSM_OLM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BA TSM OLM</label>
    <length>15</length>
    <type>Text</type>
</CustomField>