force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/BA_Zone__c.field-meta.xml
<CustomField>
    <fullName>BA_Zone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BA Zone</label>
    <length>15</length>
    <type>Text</type>
</CustomField>