force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Bill_Format__c.field-meta.xml
<CustomField>
    <fullName>Bill_Format__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bill Format</label>
    <length>20</length>
    <type>Text</type>
</CustomField>