force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Bill_Franchise_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Bill_Franchise_Tax_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bill Franchise Tax Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>