force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing Account #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>