force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Billing_Dispatch_Mode__c.field-meta.xml
<CustomField>
    <fullName>Billing_Dispatch_Mode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing Dispatch Mode</label>
    <length>25</length>
    <type>Text</type>
</CustomField>