force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Billing_Level__c.field-meta.xml
<CustomField>
    <fullName>Billing_Level__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing Level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>