force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Billing_Profile_Setup_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Profile_Setup_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing Profile Setup Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>