force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>