force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Business_Circle__c.field-meta.xml
<CustomField>
    <fullName>Business_Circle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Circle</label>
    <length>25</length>
    <type>Text</type>
</CustomField>