force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/C_o__c.field-meta.xml
<CustomField>
    <fullName>C_o__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>C/o</label>
    <length>15</length>
    <type>Text</type>
</CustomField>