force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Category</label>
    <length>4</length>
    <type>Text</type>
</CustomField>