force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/CBH_OLM__c.field-meta.xml
<CustomField>
    <fullName>CBH_OLM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CBH OLM</label>
    <length>15</length>
    <type>Text</type>
</CustomField>