force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Channel</label>
    <length>15</length>
    <type>Text</type>
</CustomField>