force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/CIN_Number__c.field-meta.xml
<CustomField>
    <fullName>CIN_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CIN Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>