force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Collection_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Collection_Manager_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Collection Manager Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>