force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Collection_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Collection_Manager_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Collection Manager Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>