force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Collection_Manager_OLM__c.field-meta.xml
<CustomField>
    <fullName>Collection_Manager_OLM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Collection Manager OLM</label>
    <length>16</length>
    <type>Text</type>
</CustomField>