force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Collection_Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>Collection_Manager_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Collection Manager Phone</label>
    <length>15</length>
    <type>Text</type>
</CustomField>