force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>