force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Contact_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address_Line_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Address Line 1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>