force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Contact_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address_Line_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact  Address Line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>