force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Contact_Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Cell_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Cell Phone #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>