force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Contact_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Customer_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Customer Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>