force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Email Address</label>
    <length>90</length>
    <type>Text</type>
</CustomField>