force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Contact_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_External_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Alternate Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>