force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>