force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Contact_Implementation_Circle__c.field-meta.xml
<CustomField>
    <fullName>Contact_Implementation_Circle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Implementation Circle</label>
    <length>20</length>
    <type>Text</type>
</CustomField>