force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Last_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Last Name</label>
    <length>45</length>
    <type>Text</type>
</CustomField>