force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>