force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Contact_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Contact_Pincode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Pincode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>