force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Contact_Premise_Relation_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Contact_Premise_Relation_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Premise Relation Lookup</label>
    <referenceTo>ContactPremiseRelation__c</referenceTo>
    <relationshipLabel>ARTL_DataMigrationStagings</relationshipLabel>
    <relationshipName>ARTL_DataMigrationStagings</relationshipName>
    <type>Lookup</type>
</CustomField>