force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Contact_Standard_Reason__c.field-meta.xml
<CustomField>
    <fullName>Contact_Standard_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Standard Reason</label>
    <length>60</length>
    <type>Text</type>
</CustomField>