force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Currency Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>