force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Customer_Origin__c.field-meta.xml
<CustomField>
    <fullName>Customer_Origin__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Origin</label>
    <length>20</length>
    <type>Text</type>
</CustomField>