force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Segment</label>
    <length>15</length>
    <type>Text</type>
</CustomField>