force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Designation</label>
    <length>30</length>
    <type>Text</type>
</CustomField>