force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Document_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Start Date</label>
    <length>15</length>
    <type>Text</type>
</CustomField>