force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/eCRM__c.field-meta.xml
<CustomField>
    <fullName>eCRM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>eCRM #</label>
    <length>18</length>
    <type>Text</type>
</CustomField>