force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Error_Message_ConPreRel__c.field-meta.xml
<CustomField>
    <fullName>Error_Message_ConPreRel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Message ConPreRel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>