force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <formula>Contact_First_Name__c &amp; Contact_Last_Name__c &amp;  Contact_Cell_Phone__c  &amp;  Contact_Email_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Id</label>
    <type>Text</type>
</CustomField>