force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Fax_Phone__c.field-meta.xml
<CustomField>
    <fullName>Fax_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fax Phone #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>