force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/FX_Leo_Status__c.field-meta.xml
<CustomField>
    <fullName>FX_Leo_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FX Leo Status</label>
    <length>8</length>
    <type>Text</type>
</CustomField>