force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/FX_Old_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>FX_Old_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FX Old Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>