force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GST #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>