force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/GST_Lookup__c.field-meta.xml
<CustomField>
    <fullName>GST_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GST Lookup</label>
    <referenceTo>GST__c</referenceTo>
    <relationshipLabel>ARTL_DataMigrationStagings</relationshipLabel>
    <relationshipName>ARTL_DataMigrationStagings</relationshipName>
    <type>Lookup</type>
</CustomField>