force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/GST_Non_Applicable_Reason__c.field-meta.xml
<CustomField>
    <fullName>GST_Non_Applicable_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GST Non Applicable Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>