force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Hulk_Counter__c.field-meta.xml
<CustomField>
    <fullName>Hulk_Counter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hulk Counter</label>
    <length>5</length>
    <type>Text</type>
</CustomField>