force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Hulk_Status__c.field-meta.xml
<CustomField>
    <fullName>Hulk_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hulk Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>