force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Identification_Type__c.field-meta.xml
<CustomField>
    <fullName>Identification_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Identification Type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>