force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/KAM_Id__c.field-meta.xml
<CustomField>
    <fullName>KAM_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>KAM Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>