force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/KAM_OLM__c.field-meta.xml
<CustomField>
    <fullName>KAM_OLM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>KAM OLM</label>
    <length>15</length>
    <type>Text</type>
</CustomField>