force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Legal Entity</label>
    <length>45</length>
    <type>Text</type>
</CustomField>