force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/License_Company__c.field-meta.xml
<CustomField>
    <fullName>License_Company__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>License Company</label>
    <length>45</length>
    <type>Text</type>
</CustomField>