force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location</label>
    <length>15</length>
    <type>Text</type>
</CustomField>