force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/NBA_Account__c.field-meta.xml
<CustomField>
    <fullName>NBA_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NBA Account #</label>
    <length>18</length>
    <type>Text</type>
</CustomField>