force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/NBA_eKYC_Number__c.field-meta.xml
<CustomField>
    <fullName>NBA_eKYC_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NBA eKYC Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>