force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/NBA_Fx_1_2_Account__c.field-meta.xml
<CustomField>
    <fullName>NBA_Fx_1_2_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NBA Fx 1.2 Account #</label>
    <length>12</length>
    <type>Text</type>
</CustomField>