force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/NBA_Fx_3_0_Account__c.field-meta.xml
<CustomField>
    <fullName>NBA_Fx_3_0_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NBA Fx 3.0 Account #</label>
    <length>12</length>
    <type>Text</type>
</CustomField>