force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/NBA_Id__c.field-meta.xml
<CustomField>
    <fullName>NBA_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NBA Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>