force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/NBA_Migration_Flag__c.field-meta.xml
<CustomField>
    <fullName>NBA_Migration_Flag__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NBA Migration Flag</label>
    <length>5</length>
    <type>Text</type>
</CustomField>