force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/NBA_Name__c.field-meta.xml
<CustomField>
    <fullName>NBA_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NBA Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>