force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/NBA_Party_Account__c.field-meta.xml
<CustomField>
    <fullName>NBA_Party_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NBA Party Account #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>