force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/OSP__c.field-meta.xml
<CustomField>
    <fullName>OSP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OSP</label>
    <length>25</length>
    <type>Text</type>
</CustomField>