force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Owned_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Owned_By_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Owned By Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>