force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner</label>
    <length>20</length>
    <type>Text</type>
</CustomField>