force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/PAN_TAN_Number__c.field-meta.xml
<CustomField>
    <fullName>PAN_TAN_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PAN/TAN Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>