force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Party_Account__c.field-meta.xml
<CustomField>
    <fullName>Party_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Party Account #</label>
    <length>18</length>
    <type>Text</type>
</CustomField>