force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Party_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Party_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Party Account Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>