force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Party_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Party_Address_Line_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Party Address Line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>