force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Party_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Party_Address_Line_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Party Address Line 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>