force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Party_Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Party_Cell_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Party Cell Phone #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>