force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Party_City__c.field-meta.xml
<CustomField>
    <fullName>Party_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Party City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>