force-app/main/default/objects/ARTL_DataMigrationStaging__c/fields/Party_Country__c.field-meta.xml
<CustomField>
    <fullName>Party_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Party Country</label>
    <length>30</length>
    <type>Text</type>
</CustomField>